--- a/assets/main.css
+++ b/assets/main.css
@@ -559,6 +559,7 @@ video {
 pre {
   margin-top: 1rem;
   margin-bottom: 1rem;
+  margin-right: 2.4rem;
   overflow-x: auto;
   border-width: 1px;
   --tw-border-opacity: 1;
