--- a/templates/components/chat/websocket_scripts.html
+++ b/templates/components/chat/websocket_scripts.html
@@ -89,7 +89,7 @@
   // Function to create copy button
   function createCopyButton(codeText) {
     const button = document.createElement('button');
-    button.className = 'absolute top-2 right-2 p-1.5 bg-white/5 rounded hover:bg-white/10 transition-colors';
+    button.className = 'absolute top-[12px] right-[50px] p-1.5 bg-white/5 rounded hover:bg-white/10 transition-colors';
     button.innerHTML = `<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-white/50 hover:text-white"><rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect><path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path></svg>`;
     
     button.onclick = async () => {
